--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -1,3 +1,7 @@
+2024-11-06 Version: v1.6.0
+- Support API ListLogContents.
+
+
 2024-10-17 Version: v1.5.0
 - Support API StartSessionCluster.
 - Support API StopSessionCluster.
