--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -1,3 +1,11 @@
+2025-09-09 Version: v1.15.0
+- Support API CreateKyuubiToken.
+- Support API DeleteKyuubiToken.
+- Support API GetKyuubiToken.
+- Support API UpdateKyuubiToken.
+- Update API CreateSqlStatement: add request parameters body.taskBizId.
+
+
 2025-08-20 Version: v1.14.0
 - Support API ListMembers.
 - Update API CreateSessionCluster: add request parameters body.clientToken.
