--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -1,3 +1,12 @@
+2025-10-28 Version: v1.16.1
+- Update API EditWorkspaceQueue: add request parameters body.resourceSpec.maxCu.
+- Update API GetJobRun: add response parameters Body.jobRun.notebookAccessUrl.
+- Update API ListJobRuns: add response parameters Body.jobRuns.$.resourceQueueId.
+- Update API ListKyuubiSparkApplications: add response parameters Body.applications.$.kyuubiServiceId.
+- Update API ListKyuubiSparkApplications: add response parameters Body.applications.$.runLog.
+- Update API ListWorkspaceQueues: add response parameters Body.queues.$.preheat.
+
+
 2025-10-17 Version: v1.16.0
 - Support API ListCatalogs.
 - Support API ListJobExecutors.
