--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -1,3 +1,7 @@
+2025-12-12 Version: v1.18.0
+- Support API GetRunConfiguration.
+
+
 2025-11-25 Version: v1.17.0
 - Support API CancelKyuubiSparkApplication.
 - Support API CreateKyuubiService.
